[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlpage"
version = "0.1.0"
authors = [
  { name="Prabhu Pant"},
]
description = "Python package to add pagination to a model and return bas64 encoded pagination token"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "sqlmodel==0.0.18",
    "SQLAlchemy==2.0.30"
]

[project.urls]
Homepage = "https://github.com/prabhupant/sqlpage"
Issues = "https://github.com/prabhupant/sqlpage/issues"