[metadata]
name = pypagination
version = 1.0.0
author = Prabhu Pant
description = Python library that provides easy to integrate pagination for any kind of data. Returns a base64 encoded string that can be used to paginate data.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/prabhupant/pypagination
project_urls =
    Bug Tracker = https://github.com/prabhupant/pypagination/issues
    repository = https://github.com/prabhupant/pypagination
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src